<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asianbank.ui.settings.SettingActivity">

    <item
        android:id="@+id/action_reconnect_server"
        android:orderInCategory="100"
        android:title="@string/action_reconnect"
        android:icon="@drawable/retry"
        app:showAsAction="always"
        android:visible="true"/>
        <item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        android:title="@string/action_config_info"
        android:icon="@drawable/logout"/>

    <item
        android:id="@+id/action_config_mode"
        android:orderInCategory="100"
        android:title="@string/action_config_mode"
        android:icon="@drawable/logout"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@drawable/logout"/>


</menu>